# Weather-CLI

./: .env  .env.example  .gitignore  Cargo.toml  README.md  conf.json
src/: api.rs  cli.rs  config.rs  helpers.rs  main.rs
src/api/: aeris_weather.rs  aeris_weather_test.rs  open_weather.rs  open_weather_test.rs
src/cli/: args.rs  args_test.rs
