[package]
name = "weather"
version = "0.1.0"
edition = "2021"
authors = ["Fedir <Fedir@github.com/FedirM>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }


[dev-dependencies]
assert_cmd = "2.0.11"
color-eyre = "0.6.2"