[package]
name = "weather"
version = "0.1.0"
edition = "2021"
authors = ["Fedir <github.com/FedirM>"]


[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
dotenv = "0.15.0"
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

[dev-dependencies]
assert_cmd = "2.0.11"
